# semantic3

./: .gitignore  CMakeLists.txt  error.c  parser.c  parser.h  semantics.c
tests/: example4.kpl
